# leksah-server

./: .gitignore  .travis.yml  cabal.project  default.nix  leksah-server.cabal  sources.txt
data/: leksah-metadata.nix  prefscoll.lkshp
main/: Collector.hs  LeksahEcho.hs
src/: LeksahEcho.hs
src/IDE/: HeaderParser.hs  StrippedPrefs.hs
src/IDE/Core/: CTypes.hs  Serializable.hs
src/IDE/Metainfo/: Collector.hs  InterfaceCollector.hs  PackageCollector.hs  SourceCollectorH.hs  SourceDB.hs  WorkspaceCollector.hs
src/IDE/Utils/: CabalPlan.hs  CabalProject.hs  FileUtils.hs  GHCUtils.hs  Project.hs  Server.hs  Tool.hs  Utils.hs  VersionUtils.hs
tests/: TestTool.hs
travis/: gtk.sh  xenial.Dockerfile  zesty.Dockerfile
