name: leksah-server
version: 0.7
cabal-version: >= 1.2
build-type: Simple
license: GPL
license-file: LICENSE
copyright: 2007-2009 Juergen Nicklisch-Franken, Hamish Mackenzie
maintainer: maintainer@leksah.org
stability: provisional
homepage: http://leksah.org
package-url: http://code.haskell.org/leksah-collector
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Metadata collection for leksah
description: The interface to GHC-API for leksah
category: IDE
author: Juergen Nicklisch-Franken, Hamish Mackenzie
data-dir: ""

library
    build-depends: Cabal >=1.6.0.1, base -any, binary >=0.5.0.0,
               binary-shared >=0.0.1, bytestring >=0.9.0.1, containers >=0.2.0.0,
               directory >=1.0.0.2, filepath >=1.1.0.1, ghc >=6.10.1,
               haddock-leksah -any, ltk ==0.7, mtl >=1.1.0.2, parsec >=2.1.0.1,
               pretty >=1.0.1.0, process >=1.0.1.0, time >= 1.1, deepseq >= 1.1,
               hslogger >= 1.0.7, network >= 2.2 && <= 3.0

    if os(windows)
        build-depends: Win32 >=2.2.0.0
        extra-libraries: kernel32
    else
        build-depends: unix >=2.3.1.0

    exposed-modules: IDE.Utils.GHCUtils IDE.Utils.Utils IDE.Utils.Tool
        IDE.Utils.FileUtils IDE.Core.CTypes IDE.Core.Serializable IDE.StrippedPrefs
        IDE.Utils.Server
    exposed: True
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules:
        IDE.Metainfo.WorkspaceCollector IDE.Metainfo.InterfaceCollector
        IDE.Metainfo.SourceCollectorH
        IDE.Metainfo.SourceDB
    ghc-options: -fwarn-unused-imports -fwarn-missing-fields -fwarn-incomplete-patterns -ferror-spans -O2

executable leksah-server
    build-depends: Cabal >=1.6.0.1, base -any, binary >=0.5.0.0,
               binary-shared >=0.0.1, bytestring >=0.9.0.1, containers >=0.2.0.0,
               directory >=1.0.0.2, filepath >=1.1.0.1, ghc >=6.10.1,
               haddock-leksah -any, ltk ==0.7, mtl >=1.1.0.2, parsec >=2.1.0.1,
               pretty >=1.0.1.0, process >=1.0.1.0, deepseq >= 1.1, network >= 2.2 && <= 3.0

    if os(windows)
        build-depends: Win32 >=2.2.0.0
        extra-libraries: kernel32
    else
        build-depends: unix >=2.3.1.0

    main-is: IDE/Metainfo/Collector.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    other-modules: IDE.StrippedPrefs IDE.Utils.GHCUtils IDE.Utils.Utils
        IDE.Core.CTypes IDE.Core.Serializable
        IDE.Metainfo.WorkspaceCollector IDE.Metainfo.InterfaceCollector
        IDE.Metainfo.SourceCollectorH IDE.Metainfo.SourceDB IDE.Utils.Tool
        IDE.HeaderParser
    ghc-options:-threaded

executable leksahecho
    main-is: LeksahEcho.hs
    buildable: True
    extensions: CPP
    hs-source-dirs: src
    ghc-prof-options: -auto-all -prof
    ghc-shared-options: -auto-all -prof
    ghc-options: -fwarn-unused-imports -fwarn-missing-fields -fwarn-incomplete-patterns -ferror-spans


