name: leksah-server
version: 0.17.0.0
cabal-version: >=1.24
build-type: Simple
license: GPL
license-file: LICENSE
copyright: 2007-2011 Juergen Nicklisch-Franken, Hamish Mackenzie
maintainer: maintainer@leksah.org
stability: provisional
homepage: http://leksah.org
package-url: http://code.haskell.org/leksah-collector
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Metadata collection for leksah
description:
    The interface to GHC-API for leksah
category: IDE
author: Juergen "jutaro" Nicklisch-Franken, Hamish Mackenzie
tested-with: GHC ==8.2.1 GHC ==8.0.2
data-files:
    data/prefscoll.lkshp
    data/leksah-metadata.nix

source-repository head
    type: git
    location: https://github.com/leksah/leksah-server

flag threaded
    description:
        Build with support for multithreaded execution

flag network-uri
    description:
        Get Network.URI from the network-uri package

library

    if !impl(ghcjs -any)

        if impl(ghc >=8.4)
            build-depends:
                haddock-api >=2.20.0 && <2.21,
                haddock-library >=1.6.0 && <1.7,
                ghc-boot >=8.4.1 && <8.5
        else
            if impl(ghc >=8.2)
                build-depends:
                    haddock-api >=2.18.1 && <2.19,
                    haddock-library >=1.4.1 && <1.5,
                    ghc-boot >=8.2.1 && <8.3
            else
                build-depends:
                    haddock-api >=2.17.2 && <2.18,
                    haddock-library >=1.4.1 && <1.5,
                    ghc-boot >=8.0.1 && <8.1

    if os(windows)
        build-depends:
            Win32 >=2.2.0.0 && <2.7
        extra-libraries:
            kernel32
    else
        build-depends:
            unix >=2.3.1.0 && <2.8

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <2.7
    else
        build-depends:
            network >=2.2 && <2.6

    if !impl(ghcjs -any)
        build-depends:
            ghc >=7.0.4 && <8.5
    exposed-modules:
        IDE.Utils.CabalPlan
        IDE.Utils.CabalProject
        IDE.Utils.GHCUtils
        IDE.Utils.Utils
        IDE.Utils.Tool
        IDE.Utils.FileUtils
        IDE.Core.CTypes
        IDE.Core.Serializable
        IDE.StrippedPrefs
        IDE.Utils.Server
        IDE.Metainfo.PackageCollector
        IDE.Utils.VersionUtils
        IDE.Metainfo.WorkspaceCollector
        IDE.Metainfo.SourceDB
        IDE.HeaderParser
        IDE.Metainfo.SourceCollectorH
    build-depends:
        Cabal >=1.24 && <2.3,
        base >=4.0.0.0 && <4.12,
        binary >=0.5.0.0 && <0.9,
        binary-shared >=0.8 && <0.9,
        bytestring >=0.9.0.1 && <0.11,
        containers >=0.2.0.0 && <0.6,
        executable-path >=0.0.3 && <0.1,
        directory >=1.0.0.2 && <1.4,
        filepath >=1.1.0.1 && <1.5,
        parsec >=3.0.0.0 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        time >=1.1 && <1.9,
        deepseq >=1.1 && <1.5,
        hslogger >=1.0.7 && <1.3,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet -any,
        attoparsec >=0.10.0.3 && <0.14,
        transformers >=0.2.2.0 && <0.6,
        strict >=0.3.2 && <0.4,
        text >=0.11.3.1 && <1.3,
        HTTP >=4000.1.2 && <4000.4,
        process >=1.1 && <1.7,
        base-compat >=0.9.0 && <0.11,
        aeson >=1.1.2.0 && <1.4,
        data-default >=0.7.1.1 && <0.8
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        IDE.Metainfo.InterfaceCollector
        Paths_leksah_server
    ghc-options: -Wall -ferror-spans

executable leksah-server

    if !impl(ghcjs -any)

        if impl(ghc >=8.4)
            build-depends:
                haddock-api >=2.20.0 && <2.21,
                haddock-library >=1.6.0 && <1.7,
                ghc-boot >=8.4.1 && <8.5
        else
            if impl(ghc >=8.2)
                build-depends:
                    haddock-api >=2.18.1 && <2.19,
                    haddock-library >=1.4.1 && <1.5,
                    ghc-boot >=8.2.1 && <8.3
            else
                build-depends:
                    haddock-api >=2.17.2 && <2.18,
                    haddock-library >=1.4.1 && <1.5,
                    ghc-boot >=8.0.1 && <8.1

    if os(windows)
        build-depends:
            Win32 >=2.2.0.0 && <2.7
        extra-libraries:
            kernel32
    else
        build-depends:
            unix >=2.3.1.0 && <2.8

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <2.7
    else
        build-depends:
            network >=2.2 && <2.6

    if os(osx)
        ghc-options: -optl-headerpad_max_install_names

    if flag(threaded)
        ghc-options: -threaded

    if !impl(ghcjs -any)
        build-depends:
            ghc >=7.0.4 && <8.5
    main-is: Collector.hs
    build-depends:
        Cabal >=1.24 && <2.3,
        base >=4.0.0.0 && <4.12,
        binary >=0.5.0.0 && <0.9,
        binary-shared >=0.8 && <0.9,
        bytestring >=0.9.0.1 && <0.11,
        containers >=0.2.0.0 && <0.6,
        executable-path >=0.0.3 && <0.1,
        directory >=1.0.0.2 && <1.4,
        filepath >=1.1.0.1 && <1.5,
        parsec >=3.0.0.0 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        time >=1.1 && <1.9,
        deepseq >=1.1 && <1.5,
        hslogger >=1.0.7 && <1.3,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet -any,
        attoparsec >=0.10.0.3 && <0.14,
        transformers >=0.2.2.0 && <0.6,
        strict >=0.3.2 && <0.4,
        text >=0.11.3.1 && <1.3,
        HTTP >=4000.1.2 && <4000.4,
        process >=1.1 && <1.7,
        leksah-server -any,
        base-compat >=0.9.0 && <0.11,
        data-default >=0.7.1.1 && <0.8
    default-language: Haskell2010
    hs-source-dirs: main
    ghc-options: -rtsopts -Wall -ferror-spans

executable leksahecho

    if !os(windows)
        build-depends:
            unix >=2.3.1.0 && <2.8

    if os(osx)
        ghc-options: -optl-headerpad_max_install_names

    if flag(threaded)
        ghc-options: -threaded
    main-is: LeksahEcho.hs
    build-depends:
        base >=4.0.0.0 && <4.12,
        hslogger >=1.0.7 && <1.3,
        deepseq >=1.1 && <1.5,
        bytestring >=0.9.0.1 && <0.11,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet -any,
        attoparsec >=0.10.0.3 && <0.14,
        transformers >=0.2.2.0 && <0.6,
        text >=0.11.3.1 && <1.3,
        process >=1.1 && <1.7,
        leksah-server -any,
        data-default >=0.7.1.1 && <0.8
    default-language: Haskell2010
    hs-source-dirs: main
    ghc-options: -Wall -ferror-spans

executable leksahtrue
    main-is: LeksahTrue.hs
    build-depends:
        base >=4.0.0.0 && <4.12,
        data-default >=0.7.1.1 && <0.8
    default-language: Haskell2010
    hs-source-dirs: main

test-suite test-tool

    if !impl(ghcjs -any)
        build-depends:
            doctest >=0.11.0 && <0.16
    type: exitcode-stdio-1.0
    main-is: TestTool.hs
    build-depends:
        base >=4.0.0.0 && <4.12,
        hslogger >=1.0.7 && <1.3,
        leksah-server -any,
        HUnit >=1.2 && <1.7,
        transformers >=0.2.2.0 && <0.6,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet -any,
        process >=1.1 && <1.7,
        directory >=1.0.0.2 && <1.4,
        filepath >=1.1.0.1 && <1.5,
        text >=0.11.3.1 && <1.3,
        data-default >=0.7.1.1 && <0.8
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -Wall -ferror-spans
