cabal-version: 3.4
name: leksah-server
version: 0.17.0.0
build-type: Simple
license: GPL-2.0-or-later
license-file: LICENSE
copyright: 2007-2011 Juergen Nicklisch-Franken, Hamish Mackenzie
maintainer: maintainer@leksah.org
stability: provisional
homepage: http://leksah.org
package-url: http://code.haskell.org/leksah-collector
bug-reports: http://code.google.com/p/leksah/issues/list
synopsis: Metadata collection for leksah
description:
    The interface to GHC-API for leksah
category: IDE
author: Juergen "jutaro" Nicklisch-Franken, Hamish Mackenzie
tested-with: GHC ==8.2.1 GHC ==8.0.2
data-files:
    data/prefscoll.lkshp
    data/leksah-metadata.nix

source-repository head
    type: git
    location: https://github.com/leksah/leksah-server

flag threaded
    description:
        Build with support for multithreaded execution

flag network-uri
    description:
        Get Network.URI from the network-uri package

library

    if !impl(ghcjs)

      if impl(ghc >=9.4)
          build-depends:
              haddock-api >=2.27.0 && <2.40,
              haddock-library >=1.10.0 && <1.20,
              ghc-boot >=9.4 && <9.20
      else
        if impl(ghc >=9.2)
          build-depends:
              haddock-api >=2.26.0 && <2.27,
              haddock-library >=1.9.0 && <1.10,
              ghc-boot >=9.2.2 && <9.3
        else
          if impl(ghc >=9.0)
              build-depends:
                  haddock-api >=2.25.1 && <2.26,
                  haddock-library >=1.10.0 && <1.11,
                  ghc-boot >=9.0.1 && <9.1
          else
            if impl(ghc >=8.10)
                build-depends:
                    haddock-api >=2.24.0 && <2.25,
                    haddock-library >=1.9.0 && <1.11,
                    ghc-boot >=8.10.1 && <8.11
            else
              if impl(ghc >=8.8)
                  build-depends:
                      haddock-api >=2.23.0 && <2.24,
                      haddock-library >=1.8.0 && <1.9,
                      ghc-boot >=8.8.1 && <8.9
              else
                  if impl(ghc >=8.6)
                      build-depends:
                          haddock-api >=2.22.0 && <2.23,
                          haddock-library >=1.7.0 && <1.8,
                          ghc-boot >=8.6.1 && <8.7
                  else
                    if impl(ghc >=8.4)
                        build-depends:
                            haddock-api >=2.20.0 && <2.21,
                            haddock-library >=1.6.0 && <1.7,
                            ghc-boot >=8.4.1 && <8.5
                    else
                        if impl(ghc >=8.2)
                            build-depends:
                                haddock-api >=2.18.1 && <2.19,
                                haddock-library >=1.4.1 && <1.5,
                                ghc-boot >=8.2.1 && <8.3
                        else
                            build-depends:
                                haddock-api >=2.17.2 && <2.18,
                                haddock-library >=1.4.1 && <1.5,
                                ghc-boot >=8.0.1 && <8.1

    if os(windows)
        build-depends:
            Win32 >=2.2.0.0 && <2.15
        extra-libraries:
            kernel32
    else
        build-depends:
            unix >=2.3.1.0 && <2.9

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <3.3
    else
        build-depends:
            network >=2.2 && <2.6

    if !impl(ghcjs)
        build-depends:
            ghc >=7.0.4 && <9.15
    exposed-modules:
        IDE.Core.CTypes
        IDE.Core.Serializable
        IDE.HeaderParser
        IDE.Metainfo.PackageCollector
        IDE.Metainfo.SourceCollectorH
        IDE.Metainfo.SourceDB
        IDE.Metainfo.WorkspaceCollector
        IDE.StrippedPrefs
        IDE.Utils.CabalPlan
        IDE.Utils.CabalProject
        IDE.Utils.FileUtils
        IDE.Utils.GHCUtils
        IDE.Utils.Project
        IDE.Utils.Server
        IDE.Utils.Tool
        IDE.Utils.Utils
        IDE.Utils.VersionUtils
    build-depends:
        Cabal >=1.24 && <3.18,
        base >=4.0.0.0 && <4.20,
        binary >=0.5.0.0 && <0.9,
        binary-shared >=0.8 && <0.9,
        bytestring >=0.9.0.1 && <0.13,
        containers >=0.2.0.0 && <0.7,
        executable-path >=0.0.3 && <0.1,
        directory >=1.0.0.2 && <1.4,
        filepath >=1.1.0.1 && <1.6,
        parsec >=3.0.0.0 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        time >=1.1 && <1.13,
        deepseq >=1.1 && <1.6,
        hslogger >=1.0.7 && <1.4,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet,
        attoparsec >=0.10.0.3 && <0.15,
        transformers >=0.2.2.0 && <0.7,
        strict >=0.3.2 && <0.6,
        text >=0.11.3.1 && <2.2,
        HTTP >=4000.1.2 && <4000.6,
        process >=1.1 && <1.7,
        base-compat >=0.10.0 && <0.16,
        aeson >=1.1.2.0 && <2.3,
        aeson-pretty >=0.8.7 && <0.9,
        data-default >=0.7.1.1 && <0.9
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        IDE.Metainfo.InterfaceCollector
        Paths_leksah_server
    ghc-options: -Wall -ferror-spans

executable leksah-server

    if !impl(ghcjs)
      build-depends:
          haddock-api,
          haddock-library,
          ghc-boot,
          ghc

    if os(windows)
        build-depends:
            Win32 >=2.2.0.0 && <2.15
        extra-libraries:
            kernel32
    else
        build-depends:
            unix >=2.3.1.0 && <2.9

    if flag(network-uri)
        build-depends:
            network-uri >=2.6 && <2.7,
            network >=2.6 && <3.3
    else
        build-depends:
            network >=2.2 && <2.6

    if os(osx)
        ghc-options: -optl-headerpad_max_install_names

    if flag(threaded)
        ghc-options: -threaded

    main-is: Collector.hs
    build-depends:
        Cabal >=1.24 && <3.18,
        base >=4.0.0.0 && <4.20,
        binary >=0.5.0.0 && <0.9,
        binary-shared >=0.8 && <0.9,
        bytestring >=0.9.0.1 && <0.13,
        containers >=0.2.0.0 && <0.7,
        executable-path >=0.0.3 && <0.1,
        directory >=1.0.0.2 && <1.4,
        filepath >=1.1.0.1 && <1.6,
        parsec >=3.0.0.0 && <3.2,
        pretty >=1.0.1.0 && <1.2,
        time >=1.1 && <1.13,
        deepseq >=1.1 && <1.6,
        hslogger >=1.0.7 && <1.4,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet,
        attoparsec >=0.10.0.3 && <0.15,
        transformers >=0.2.2.0 && <0.7,
        strict >=0.3.2 && <0.6,
        text >=0.11.3.1 && <2.2,
        HTTP >=4000.1.2 && <4000.6,
        process >=1.1 && <1.7,
        leksah-server,
        base-compat >=0.10.0 && <0.16,
        data-default >=0.7.1.1 && <0.9
    default-language: Haskell2010
    hs-source-dirs: main
    ghc-options: -rtsopts -Wall -ferror-spans

executable leksahecho

    if !os(windows)
        build-depends:
            unix >=2.3.1.0 && <2.9

    if os(osx)
        ghc-options: -optl-headerpad_max_install_names

    if flag(threaded)
        ghc-options: -threaded
    main-is: LeksahEcho.hs
    build-depends:
        base >=4.0.0.0 && <4.20,
        hslogger >=1.0.7 && <1.4,
        deepseq >=1.1 && <1.6,
        bytestring >=0.9.0.1 && <0.13,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet,
        attoparsec >=0.10.0.3 && <0.15,
        transformers >=0.2.2.0 && <0.7,
        text >=0.11.3.1 && <2.2,
        process >=1.1 && <1.7,
        leksah-server,
        data-default >=0.7.1.1 && <0.9
    default-language: Haskell2010
    hs-source-dirs: main
    ghc-options: -Wall -ferror-spans

executable leksahtrue
    main-is: LeksahTrue.hs
    build-depends:
        base >=4.0.0.0 && <4.15,
        data-default >=0.7.1.1 && <0.9
    default-language: Haskell2010
    hs-source-dirs: main

test-suite test-tool

    if !impl(ghcjs)
        build-depends:
            doctest >=0.11.0 && <0.26
    type: exitcode-stdio-1.0
    main-is: TestTool.hs
    build-depends:
        base >=4.0.0.0 && <4.20,
        hslogger >=1.0.7 && <1.4,
        leksah-server,
        HUnit >=1.2 && <1.7,
        transformers >=0.2.2.0 && <0.7,
        conduit >=1.0.8 && <1.4,
        conduit-extra >=1.0.0.1 && <1.4,
        resourcet,
        process >=1.1 && <1.7,
        directory >=1.0.0.2 && <1.4,
        filepath >=1.1.0.1 && <1.6,
        text >=0.11.3.1 && <2.2,
        data-default >=0.7.1.1 && <0.9
    default-language: Haskell2010
    hs-source-dirs: tests
    ghc-options: -Wall -ferror-spans
